--- a/client/hola.html
+++ b/client/hola.html
@@ -1,6 +1,45 @@
 <html>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.6.0/d3.min.js"></script>
 <body>
   <h1>Hola :3!</h1>
-  <script src="./index.js"></script>
+
+  <script src="./scripts/bubbleChart.js">
+
+      var chart;
+        /*
+      d3.json('files/Fixed_Serp.json', function(error, data){
+          if(error){
+              console.log("Error Getting or Parsing the Data");
+              throw error;
+          }
+          chart = bubbleChart()
+              .height(600)
+              .width(700)
+              .title("Query: "+data.terminos)
+              .forceApart(-600)
+              .maxRadius(70)
+              .minRadius(10)
+              .attrRadius("length")
+              .showTitleOnCircle(true)
+              .customColors("length", "A5");
+          d3.select('#chart').datum(data).call(chart);
+      });
+
+      d3.interval(function() {
+
+          d3.json('files/Fixed_Serp.json', function(error, data){
+              if(error){
+                  console.log("Error Getting or Parsing the Data");
+                  throw error;
+              }
+              d3.select('#chart').datum(data).call(chart);
+              console.log('updating...');
+
+          });
+      }, 1000);
+        */
+
+  </script>
+
 </body>
 </html>
