visualization 1 working, 2 in process

--- a/client/hola.html
+++ b/client/hola.html
@@ -1,6 +1,5 @@
 <html>
 <head>
-  <script src="./index.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.0/css/bootstrap.min.css" integrity="sha384-PDle/QlgIONtM1aqA2Qemk5gPOE7wFq8+Em+G/hmo5Iq0CCmYZLv3fVRDJ4MMwEA" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.0/js/bootstrap.min.js" integrity="sha384-7aThvCh9TypR7fIc2HV4O/nFMVCBwyIUKL8XCtKE+8xgCgl/PQGuFsvShjr74PBp" crossorigin="anonymous"></script>
@@ -26,14 +25,11 @@
             margin-left: 10px;
             margin-righ:10px;
         }
-
-
-
-
     </style>
 </head>
-<body>
 
+
+<body>
 
 <div class="search-box">
     <div class="container">
@@ -47,15 +43,23 @@
                     <h1>Stare.js</h1>
                 </div>
                 <div class="box active-pink-3 active-pink-4 mb-4">
+
                     <input class="form-control" type="text" placeholder="Search" aria-label="Search">
+
                 </div>
 
                 <div class="options d-flex justify-content-center">
+
                     <button type="button" class="btn btn-secondary">Google</button>
+
                     <button type="button" class="btn btn-secondary">Bing!</button>
+
                     <button type="button" class="btn btn-secondary">Yahoo!</button>
+
                 </div>
+
             </div>
+
             <div class="col-sm-3">
 
             </div>
@@ -68,15 +72,18 @@
 
 
 <div class="options">
-    <button type="button" class="btn btn-primary" id="btn_1">BubbleChart!</button>
-    <button type="button" class="btn btn-primary" id="btn_2">Chart 2</button>
-    <button type="button" class="btn btn-primary" id="btn_3">Chart 3</button>
-</div>
 
+    <button type="button" class="btn btn-primary" id="btn_1">Bubble Chart</button>
+
+    <button type="button" class="btn btn-primary" id="btn_2">Bar Chart</button>
+
+    <button type="button" class="btn btn-primary" id="btn_3">Chart 3</button>
+
+</div>
 
 <div class="chart-example" id="chart"><svg></svg></div>
 
+<script src="./index.js"></script>
 
 </body>
 </html>
-
