--- a/client/hola.html
+++ b/client/hola.html
@@ -77,11 +77,13 @@
 
     <button type="button" class="btn btn-primary" id="btn_2">Bar Chart</button>
 
-    <button type="button" class="btn btn-primary" id="btn_3">Chart 3</button>
+    <button type="button" class="btn btn-primary" id="btn_3">Classic Text</button>
 
 </div>
 
-<div class="chart-example" id="chart"><svg></svg></div>
+<div class="chart-example" id="chart" style="padding-left: 30px;"><svg></svg></div>
+<div class="chart-example" id="chart2" style="padding-left: 30px;"><svg></svg></div>
+<div class="chart-example" id="chart3" style="padding-left: 30px;"><svg></svg></div>
 
 <script src="./index.js"></script>
 
