Ecosia Conected to Client

--- a/client/hola.html
+++ b/client/hola.html
@@ -44,7 +44,7 @@
                 </div>
                 <div class="box active-pink-3 active-pink-4 mb-4">
 
-                    <input class="form-control" type="text" placeholder="Search" aria-label="Search">
+                    <input class="form-control" id="SearchBox" type="text" placeholder="Search" aria-label="Search">
 
                 </div>
 
@@ -52,7 +52,7 @@
 
                     <button type="button" class="btn btn-secondary">Google</button>
 
-                    <button type="button" class="btn btn-secondary">Bing!</button>
+                    <button type="button" id="btn_ecosia" class="btn btn-secondary">Ecosia</button>
 
                     <button type="button" class="btn btn-secondary">Yahoo!</button>
 
@@ -81,9 +81,10 @@
 
 </div>
 
-<div class="chart-example" id="chart" style="padding-left: 30px;"><svg></svg></div>
-<div class="chart-example" id="chart2" style="padding-left: 30px;"><svg></svg></div>
-<div class="chart-example" id="chart3" style="padding-left: 30px;"><svg></svg></div>
+<div class="chart-example" id="chart" style="padding-left: 30px; padding-top: 0px; padding-bottom: 0px;"><svg></svg></div>
+<div class="chart-example" id="chart2" style="padding-left: 30px; padding-top: 0px; padding-bottom: 0px;"><svg></svg></div>
+<div class="chart-example" id="chart3" style="padding-left: 30px; padding-top: 0px; padding-bottom: 0px;"><svg></svg></div>
+<div class="chart-example" id="searchResults" style="padding-left: 30px; padding-top: 0px; padding-bottom: 0px;"><svg></svg></div>
 
 <script src="./index.js"></script>
 
