--- a/client/hola.html
+++ b/client/hola.html
@@ -99,7 +99,9 @@
             z-index: 999;
             background: #7386D5;
         }
-
+        .graficos{
+            padding-left: 25%;
+        }
     </style>
 
 </head>
@@ -174,15 +176,20 @@
             </div>
         </div>
     </div>
-    <div class="container">
+
+
+    <div class="graficos">
 
                 <div class="chart" id="chart" ><svg></svg></div>
                 <div class="chart" id="chart2"><svg></svg></div>
                 <div class="chart" id="chart3" ><svg></svg></div>
-                <div class="chart" id="searchResults"> </div>
-
 
     </div>
+
+    <div class="content">
+        <div class="chart"  id="searchResults"> </div>
+    </div>
+
 </div>
 
 
