fixed remove functions.

--- a/client/hola.html
+++ b/client/hola.html
@@ -125,9 +125,9 @@
 
             <div class="viz2">
                 <ul class="list-unstyled">
-                    <li id="btn_1">Bubble Chart</li>
-                    <li id="btn_2">Bar Chart</li>
-                    <li id="btn_3">Classic Text</li>
+                    <li id="btn_1" class="clear">Bubble Chart</li>
+                    <li id="btn_2" class="clear">Bar Chart</li>
+                    <li id="btn_3" class="clear">Classic Text</li>
                 </ul>
             </div>
         </ul>
@@ -180,15 +180,20 @@
 
     <div class="graficos">
 
-                <div class="chart" id="chart" ><svg></svg></div>
-                <div class="chart" id="chart2"><svg></svg></div>
-                <div class="chart" id="chart3" ><svg></svg></div>
+                <div class="chart" id="chart" >
+                    <svg></svg>
+                </div>
+
+                <div class="chart" id="chart2">
+                    <svg></svg>
+                </div>
+
+                <div class="chart" id="searchResults" >
+                    <svg></svg>
+                </div>
 
     </div>
 
-    <div class="content">
-        <div class="chart"  id="searchResults"> </div>
-    </div>
 
 </div>
 
