--- a/client/index.html
+++ b/client/index.html
@@ -28,6 +28,7 @@
                 <ul class="list-unstyled">
                     <li id="btn_1" class="clear">Bubble Chart</li>
                     <li id="btn_2" class="clear">Bar Chart</li>
+
                 </ul>
             </div>
         </ul>
@@ -72,6 +73,8 @@
                     <button type="button" id="btn_google" class="btn btn-secondary">Google</button>
 
                     <button type="button" id="btn_ecosia" class="btn btn-secondary">Ecosia</button>
+
+                    <button type="button" id="btn_moreDocs" class="btn btn-secondary" style="display: none;">More Documents</button>
                 </div>
             </div>
         </div>
